# ijk_types

./: CMakeLists.txt  CMakePresets.json  README.md
include/: complex.h  directions.h  quat.h  type_help.h
include/ijk/: complex.h  directions.h  quat.h  type_help.h  vector.h
tests/: CMakeLists.txt  basic.cpp  complex.test.cpp  directions.test.cpp  quat.test.cpp  vector.test.cpp
